Minor Update: Fix Whitespace in Admin Screenshot Panel

--- a/src/components/AdminPanel/Create/Screenshots/AddScreenshotSec.module.css
+++ b/src/components/AdminPanel/Create/Screenshots/AddScreenshotSec.module.css
@@ -18,15 +18,15 @@ Copyright (c) Geekofia 2020 and beyond
   position: relative;
 }
 
-.options_wrapper {
+/* .options_wrapper {
   width: 100%;
   height: 3rem;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: center; */
   /* background: chocolate; */
   /* border-bottom: 2px solid chocolate; */
-}
+/* } */
 
 .options_wrapper select {
   color: #fff;
